# codeshift

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pom.xml  pyproject.toml
.github/agents/: TAILWIND_UI_INSTRUCTIONS.agent.md
.github/workflows/: ci.yml
apps/business_api/: pyproject.toml
apps/business_api/src/codeshift_business_api/: __init__.py  main.py
codeshift-agents/: pom.xml
codeshift-agents/src/main/java/com/codeshift/agents/: AnalysisAgent.java  ArchitectureAgent.java  DebtAgent.java  ExtractedRule.java  HardeningAgent.java  PerformanceAgent.java  RequirementsAgent.java  TransformationAgent.java  ValidationAgent.java
codeshift-agents/src/test/java/com/codeshift/agents/: AnalysisAgentTest.java  ArchitectureAgentTest.java  DebtAgentTest.java  (+5 more)
codeshift-api/: pom.xml
codeshift-api/src/main/resources/: application.yml
codeshift-api/src/main/resources/db/migration/: V3__agent_tasks.sql  V4__billing.sql  V5__payments.sql  V6__tenant_secrets.sql  V7__tenant_model_deployments.sql
codeshift-assessment/: pom.xml
codeshift-bsg/: pom.xml
codeshift-bsg-mcp/: pom.xml
codeshift-bsg-mcp/src/main/resources/: application.yml
codeshift-bsg/src/test/resources/: application.properties
codeshift-common/: pom.xml
codeshift-compliance/: pom.xml
codeshift-datashift/: pom.xml
codeshift-evals/: pom.xml
codeshift-graph/: pom.xml
codeshift-java-parser-mcp/: pom.xml
codeshift-java-parser-mcp/src/main/resources/: application.yml
codeshift-model-gateway/: pom.xml
codeshift-parser/: pom.xml
codeshift-sandbox/: pom.xml
codeshift-web/: index.html  package-lock.json  package.json  vite.config.ts
codeshift-web/src/: App.tsx  api.ts  styles.css
codeshift-web/src/components/: AppLayout.tsx  ArchitectureView.tsx  BsgReviewBoard.tsx  CodeShiftLogo.tsx  DependencyGraph.tsx  HardeningView.tsx  ReportView.tsx  TransformationView.tsx  UploadPanel.tsx
codeshift-web/src/pages/: BillingPage.tsx  CompliancePage.tsx  DashboardPage.tsx  DataShiftPage.tsx  LoginPage.tsx  MaintenancePage.tsx  MigratePage.tsx  NewCodePage.tsx  NotFoundPage.tsx  OnboardingPage.tsx  PlaybooksPage.tsx  PortfolioPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
db/: README.md
db/migrations/: V1__init.sql  V2__bsg.sql
docs/architecture/: README.md  agentic-architecture.md  implementation-plan.md
github_patches/workflows/: ci.patch.yaml
mcp/bsg_mcp/: pyproject.toml
mcp/bsg_mcp/src/codeshift_bsg_mcp/: __init__.py  server.py
tests/: test_cost.py  test_graph.py  test_profiles.py  test_schemas.py
(+148 files in other folders)
