[project]
name = "codeshift-business-api"
version = "0.1.0"
description = "FastAPI control plane: run lifecycle + live agent-log streaming bridge."
requires-python = ">=3.11"
dependencies = [
    "codeshift-common",
    "codeshift-graph",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeshift_business_api"]
