[project]
name = "codeshift-bsg-mcp"
version = "0.1.0"
description = "MCP server exposing the BSG store as typed tools to agents."
requires-python = ">=3.11"
dependencies = [
    "codeshift-common",
    "codeshift-bsg",
    "mcp>=1.2",
]

[project.scripts]
codeshift-bsg-mcp = "codeshift_bsg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeshift_bsg_mcp"]
